# 1-Aplica-o-de-teste-para-a-realiza-o-dos-testes-manuais-para-Quality-Assurance.-

./: README.md  pyproject.toml
