[tool.poetry]
name = "1ª Aplicação de teste para a realização dos testes manuais para Quality Assurance.' ""
version = "0.1.0"
description = ""
authors = ["Jussara Alves Gomes para teste <vxcv>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"